fixed spacing for profile bio

--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -227,10 +227,10 @@ a#global-logo {
 
 .profileDetails {
     float: left;
-}
-
-.profileDetails p {
-    margin-bottom:0;
+    margin-bottom: 2em;
+    p {
+        margin-bottom:0;
+    }
 }
 
 .profileLabel {
@@ -238,8 +238,9 @@ a#global-logo {
 }
 
 .profileBio {
-    clear:both;
-    margin-right:25px;
+    clear: both;
+    display: block;
+    margin-bottom: 2em;
 }
 
 .notification {
